FullSb1-27-apr-15/src/objects/Fees__c.object
<CustomObject>
    <fields>
        <fullName>BBA_Studio_Vista_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio Vista P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Studio_Vista_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio Vista P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Studio_Vista_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Studio Vista P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Twin_P1_Year_1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Twin P1 - Year 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Twin_P1_Year_2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Twin P1 - Year 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BBA_Twin_P1_Year_3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Twin P1 - Year 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Bunk Studio P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Bunk Studio P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_Vista_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Bunk Studio Vista P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_Vista_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Bunk Studio Vista P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bunk_Studio_Vista_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Bunk Studio Vista P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit__c</fullName>
        <description>Confirmation Deposit for current program and year</description>
        <inlineHelpText>Confirmation Deposit for current program and year</inlineHelpText>
        <label>Confirmation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DUB_Visa_Residence__c</fullName>
        <description>UAE - Visa - Residence</description>
        <label>DUB - Visa - Residence</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DUB_Visa_Transit__c</fullName>
        <description>UAE - Visa - Transit</description>
        <label>DUB - Visa - Transit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DUB_Visa_Visit__c</fullName>
        <description>UAE - Visa - Visit</description>
        <label>DUB - Visa - Visit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_Extra_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment Extra P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_Extra_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment Extra P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_Extra_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 51 to 52 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment Extra P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_P1__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 1 to 42 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment P1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_P2__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <inlineHelpText>Weekly price for 43 to 50 weeks</inlineHelpText>
        <label>Deluxe Studio Apartment P2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deluxe_Studio_Apartment_P3__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Deluxe Studio Apartment P3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diploma_in_MDM_or_MFIN__c</fullName>
        <label>Diploma in MDM or MFIN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Double_Room_Mod_D__c</fullName>
        <label>Dubai - Double Room - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Double_Room_Mod_E__c</fullName>
        <label>Dubai - Double Room - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Double_of_Three_Mod_D__c</fullName>
        <label>Dubai - Double of Three - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Double_of_Three_Mod_E__c</fullName>
        <label>Dubai - Double of Three - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_EMBA_Transit_Visa_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Dubai - EMBA Transit Visa - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_EMBA_Transit_Visa_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Dubai - EMBA Transit Visa - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Housing_Bursary__c</fullName>
        <label>Dubai Housing Bursary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_Room_Mod_D__c</fullName>
        <label>Dubai - Single Room - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_Room_Mod_E__c</fullName>
        <label>Dubai - Single Room - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_Shared_Mod_D__c</fullName>
        <label>Dubai - Single Shared - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_Shared_Mod_E__c</fullName>
        <label>Dubai - Single Shared - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_of_Three_Mod_D__c</fullName>
        <label>Dubai - Single of Three - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Single_of_Three_Mod_E__c</fullName>
        <label>Dubai - Single of Three - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Student_Residence_Visa_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Dubai - Student Residence Visa - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Student_Residence_Visa_Mod_E__c</fullName>
        <label>Dubai - Student Residence Visa - Mod E</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visit_Visa_1_Month_Mod_D__c</fullName>
        <label>Dubai - Visit Visa (1 Month) - Mod D</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visit_Visa_1_Month_Mod_E__c</fullName>
        <label>Dubai - Visit Visa (1 Month) - Mod E</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visit_Visa_3_Months_Mod_D__c</fullName>
        <label>Dubai - Visit Visa (3 Months) - Mod D</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dubai_Visit_Visa_3_Months_Mod_E__c</fullName>
        <label>Dubai - Visit Visa (3 Months) - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMBA_Hotel__c</fullName>
        <label>EMBA Hotel</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_2_Child__c</fullName>
        <label>ERIKA Single &amp; 2 Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_6_months_visiting__c</fullName>
        <label>ERIKA Single 6 months (visiting)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_Child__c</fullName>
        <label>ERIKA Single &amp; Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_Spouse_2_Child__c</fullName>
        <label>ERIKA Single &amp; Spouse &amp; 2 Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_Spouse_Child__c</fullName>
        <label>ERIKA Single &amp; Spouse &amp; Child</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERIKA_Single_Spouse__c</fullName>
        <label>ERIKA Single &amp; Spouse</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Erika Insurance - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Insurance_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>Erika Insurance - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Erika_Single__c</fullName>
        <label>ERIKA Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_accommodation_with_dependent_8mth__c</fullName>
        <label>Free accommodation with dependent – 8mth</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GoEd_Application_Fee_Fee_Object_c__c</fullName>
        <label>GoEd Application Fee (in USD)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_Assam_Studio_Single__c</fullName>
        <label>HH_Assam_Studio_Single</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Classic_Studio_Deluxe_Single__c</fullName>
        <label>HH - Classic Studio Deluxe - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Classic_Studio_Single__c</fullName>
        <label>HH - Classic Studio - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Club_Studio_Deluxe_Single__c</fullName>
        <label>HH - Club Studio Deluxe - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Club_Studio_Single__c</fullName>
        <label>HH - Club Studio - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Solo_Single__c</fullName>
        <label>HH - Solo - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Studios_Premium_11_14_Single__c</fullName>
        <label>HH - Studios Premium 11-14 - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Studios_Premium_15_16_Single__c</fullName>
        <label>HH - Studios Premium 15 -16 - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Studios_Vista_Single__c</fullName>
        <label>HH - Studios Vista - Single</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Study_Twin_Double__c</fullName>
        <label>HH - Study Twin - Double</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Super_Twin_Double__c</fullName>
        <label>HH - Super Twin - Double</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Twin_Plus_Double__c</fullName>
        <label>HH - Twin Plus - Double</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Twin_Studios_Double__c</fullName>
        <label>HH - Twin Studios - Double</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <label>Housing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hult_House_East_12_Months__c</fullName>
        <label>HH East – 12 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IEMBA_3_months_Insurance__c</fullName>
        <label>IEMBA 3 months Insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IEMBA_6_months_Insurance__c</fullName>
        <label>IEMBA 6 months Insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMEBA_3_months__c</fullName>
        <label>IEMBA 3 months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMEBA_6_months__c</fullName>
        <label>IEMBA 6 months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_country_Student_Visa_Transfer__c</fullName>
        <label>In country Student Visa Transfer</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_Flex_Fee__c</fullName>
        <label>Installment Plan Flex Fee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_fee__c</fullName>
        <label>Installment Plan fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Erika_Mod_D__c</fullName>
        <description>Insurance - Erika - Mod D</description>
        <label>Insurance - Erika - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Erika_Mod_E__c</fullName>
        <description>Insurance - Erika - Mod E</description>
        <label>Insurance - Erika - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_IEMBA_3m__c</fullName>
        <label>Insurance IEMBA 3m</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_IEMBA_6m__c</fullName>
        <label>Insurance IEMBA 6m</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Apartment_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Apartment - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Apartment_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Apartment - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Apartment_Vista_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Apartment Vista - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Apartment_Vista_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Apartment Vista - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Bunk_Studio_Mod_D__c</fullName>
        <label>London - Bunk Studio - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Bunk_Studio_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Bunk Studio - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Bunk_Studio_Vista_Mod_D__c</fullName>
        <label>London - Bunk Studio Vista - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Bunk_Studio_Vista_Mod_E__c</fullName>
        <description>SHA - Housing - Type D1 - Mod E</description>
        <label>London - Bunk Studio Vista - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Deluxe_Studio_Apartment_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Deluxe Studio Apartment - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Deluxe_Studio_Apartment_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Deluxe Studio Apartment - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Deluxe_Studio_Apt_Extra_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Deluxe Studio Apt Extra - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Deluxe_Studio_Apt_Extra_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Deluxe Studio Apt Extra - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Penthouse_Luxury_Studio_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Penthouse Luxury Studio - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Penthouse_Luxury_Studio_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Penthouse Luxury Studio - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Premium_Single_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Premium Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Premium_Single_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Premium Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Premium_Twin_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Premium Twin - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Premium_Twin_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Premium Twin - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Single_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Single_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Studio_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Studio - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Studio_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Studio - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Studio_Vista_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Studio Vista - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Studio_Vista_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Studio Vista - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Twin_Mod_D__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Twin - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Twin_Mod_E__c</fullName>
        <description>This field Label and API Name is hard coded in the development for extracting values from the Fees, please contact development team for any changes.</description>
        <label>London - Twin - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Large_Single_Mod_D__c</fullName>
        <label>NYC - Housing - Large Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Large_Single_Mod_E__c</fullName>
        <label>NYC - Housing - Large Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Single_Mod_D_E__c</fullName>
        <description>NY - Housing - Single - Mod D&amp;E</description>
        <label>NYC - Housing - Single - Mod D&amp;E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Single_Mod_D__c</fullName>
        <description>NY - Housing - Single - Mod D</description>
        <label>NYC - Housing - Single - Mod D</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Single_Mod_E__c</fullName>
        <description>NY - Housing - Single - Mod E</description>
        <label>NYC - Housing - Single - Mod E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYC_Housing_Twin_Mod_D_E__c</fullName>
        <description>NY - Housing - Twin - Mod D&amp;E</description>
        <label>NYC - Housing - Twin - Mod D&amp;E</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>